--- a/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
@@ -83,7 +83,7 @@
   "an10.172:22.1": "Der Buddha hat diesen kurzen Merksatz zum Aufsagen vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
   "an10.172:22.2": "‚Ihr solltet schlechte Grundsätze und gute Grundsätze kennen … ",
   "an10.172:22.3": "und im Einklang damit üben.‘ ",
-  "an10.172:22.4": "So verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde. ",
+  "an10.172:22.4": "So verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde. ",
   "an10.172:22.5": "Wenn ihr wollt, geht zum Buddha und fragt ihn danach. ",
   "an10.172:22.6": "So wie er es erklärt, solltet ihr es behalten.“ ",
   "an10.172:23.1": "„Ja, Geehrter“, antworteten jene Mönche und Nonnen. Sie begrüßten Mahākaccānas Worte und stimmten ihm zu und erhoben sich von ihren Sitzen. Sie gingen sie zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm die Begebenheit. Dann sagten sie: ",
