--- a/translation/de/sabbamitta/sutta/an/an10/an10.27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.27_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "an10.27:10.4": "Welches eine Ding? ",
   "an10.27:10.5": "‚Alle Lebewesen werden durch Nahrung erhalten.‘ ",
   "an10.27:10.6": "Wenn sie in Bezug auf dieses eine Ding vollständig ernüchtert wird, wenn die Leidenschaft schwindet und sie davon befreit ist, wenn sie seine Grenzen sieht und seine Bedeutung vollständig erfasst, macht eine Nonne dem Leiden in diesem Leben ein Ende. ",
-  "an10.27:10.7": "‚Ein Ding: Frage, Merksatz und Antwort.‘ ",
+  "an10.27:10.7": "‚Ein Ding: Frage, Merksatz zum Aufsagen und Antwort.‘ ",
   "an10.27:10.8": "Das habe ich gesagt, und insofern habe ich es gesagt. ",
   "an10.27:11.1": "‚Zwei Dinge …‘ ",
   "an10.27:11.4": "Welche zwei Dinge? ",
