--- a/translation/de/sabbamitta/sutta/an/an10/an10.27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.27_translation-de-sabbamitta.json
@@ -56,7 +56,7 @@
   "an10.27:18.1": "‚Neun Dinge …‘ ",
   "an10.27:18.4": "Welche neun Dinge? ",
   "an10.27:18.5": "Die neun Wohnplätze der Lebewesen … ",
-  "an10.27:19.1": "‚Zehn Dinge: Frage, Merksatz und Antwort.‘ ",
+  "an10.27:19.1": "‚Zehn Dinge: Frage, Merksatz zum Aufsagen und Antwort.‘ ",
   "an10.27:19.2": "Das habe ich gesagt, aber inwiefern habe ich es gesagt? ",
   "an10.27:19.3": "Wenn sie in Bezug auf zehn Dinge vollständig ernüchtert wird, wenn die Leidenschaft schwindet und sie davon befreit ist, wenn sie ihre Grenzen sieht und ihre Bedeutung vollständig erfasst, macht eine Nonne dem Leiden in diesem Leben ein Ende. ",
   "an10.27:19.4": "Welche zehn Dinge? ",
