--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -249,5 +249,6 @@
   "mn82:35.1": "„Großer König, der Gesegnete, der erkennt und sieht, der Vollendete, der vollkommen erwachte Buddha hat vier Merksätze der Lehre zum Aufsagen gelehrt. Nachdem ich diese Merksätze der Lehre zum Aufsagen erkannt und gesehen und gehört hatte, zog ich aus dem Haus fort ins hauslose Leben. ",
   "mn82:35.2": "Welche vier? ",
   "mn82:36.1": "‚Die Welt ist brüchig und wird fortgerissen.‘ ",
-  "mn82:36.2": "Das ist der erste Merksatz. "
+  "mn82:36.2": "Das ist der erste Merksatz. ",
+  "mn82:36.3": "‚Die Welt hat keinen Schutz und keinen Retter.‘ "
 }
