--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -253,5 +253,6 @@
   "mn82:36.3": "‚Die Welt hat keinen Schutz und keinen Retter.‘ ",
   "mn82:36.4": "Das ist der zweite Merksatz. ",
   "mn82:36.5": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘ ",
-  "mn82:36.6": "Das ist der dritte Merksatz. "
+  "mn82:36.6": "Das ist der dritte Merksatz. ",
+  "mn82:36.7": "‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ "
 }
