--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -256,5 +256,6 @@
   "mn82:36.6": "Das ist der dritte Merksatz. ",
   "mn82:36.7": "‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ ",
   "mn82:36.8": "Das ist der vierte Merksatz. ",
-  "mn82:37.1": "Der Gesegnete, der erkennt und sieht, der Vollendete, der vollkommen erwachte Buddha hat diese vier Merksätze der Lehre zum Aufsagen gelehrt. Nachdem ich diese Merksätze der Lehre zum Aufsagen erkannt und gesehen und gehört hatte, zog ich aus dem Haus fort ins hauslose Leben.“ "
+  "mn82:37.1": "Der Gesegnete, der erkennt und sieht, der Vollendete, der vollkommen erwachte Buddha hat diese vier Merksätze der Lehre zum Aufsagen gelehrt. Nachdem ich diese Merksätze der Lehre zum Aufsagen erkannt und gesehen und gehört hatte, zog ich aus dem Haus fort ins hauslose Leben.“ ",
+  "mn82:38.1": "„‚Die Welt ist brüchig und wird fortgerissen.‘ "
 }
