--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -262,5 +262,6 @@
   "mn82:38.3": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
   "mn82:38.4": "„Was denkst du, großer König? ",
   "mn82:38.5": "Als du zwanzig oder fünfundzwanzig Jahr alt warst, warst du da erprobt im Elefanten- und Pferdereiten, Streitwagenfahren, Bogenschießen und Schwertkampf? Hattest du starke Schenkel und Arme, warst fähig und schlachterprobt?“ ",
-  "mn82:38.6": "„Das war ich, Meister Raṭṭhapāla. "
+  "mn82:38.6": "„Das war ich, Meister Raṭṭhapāla. ",
+  "mn82:38.7": "Manchmal schien es damals, als hätte ich übernatürliche Kräfte. Ich sehe niemanden, der mir an Kraft hätte gleichkommen können.“ "
 }
