--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -265,5 +265,6 @@
   "mn82:38.6": "„Das war ich, Meister Raṭṭhapāla. ",
   "mn82:38.7": "Manchmal schien es damals, als hätte ich übernatürliche Kräfte. Ich sehe niemanden, der mir an Kraft hätte gleichkommen können.“ ",
   "mn82:38.8": "„Was denkst du, großer König? ",
-  "mn82:38.9": "Hast du heutzutage ebenso starke Schenkel und Arme und bist fähig und schlachterprobt?“ "
+  "mn82:38.9": "Hast du heutzutage ebenso starke Schenkel und Arme und bist fähig und schlachterprobt?“ ",
+  "mn82:38.10": "„Nein, Meister Raṭṭhapāla. "
 }
