--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -269,5 +269,6 @@
   "mn82:38.10": "„Nein, Meister Raṭṭhapāla. ",
   "mn82:38.11": "Denn jetzt bin ich alt, bejahrt und hochbetagt. Ich bin in vorgerücktem Alter und im letzten Lebensabschnitt angekommen. Ich bin achtzig Jahre alt. ",
   "mn82:38.12": "Manchmal will ich irgendwohin treten, aber mein Fuß geht irgendwo anders hin.“ ",
-  "mn82:38.13": "„Das ist es, was der Buddha meinte, als er sagte: "
+  "mn82:38.13": "„Das ist es, was der Buddha meinte, als er sagte: ",
+  "mn82:38.14": "‚Die Welt ist brüchig und wird fortgerissen.‘ "
 }
