--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -271,5 +271,6 @@
   "mn82:38.12": "Manchmal will ich irgendwohin treten, aber mein Fuß geht irgendwo anders hin.“ ",
   "mn82:38.13": "„Das ist es, was der Buddha meinte, als er sagte: ",
   "mn82:38.14": "‚Die Welt ist brüchig und wird fortgerissen.‘“ ",
-  "mn82:38.16": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, "
+  "mn82:38.16": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
+  "mn82:38.17": "wie treffend das vom Buddha gesagt wurde! "
 }
