--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -272,5 +272,6 @@
   "mn82:38.13": "„Das ist es, was der Buddha meinte, als er sagte: ",
   "mn82:38.14": "‚Die Welt ist brüchig und wird fortgerissen.‘“ ",
   "mn82:38.16": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
-  "mn82:38.17": "wie treffend das vom Buddha gesagt wurde! "
+  "mn82:38.17": "wie treffend das vom Buddha gesagt wurde! ",
+  "mn82:38.19": "Denn die Welt ist tatsächlich brüchig und wird fortgerissen. "
 }
