--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -274,5 +274,6 @@
   "mn82:38.16": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
   "mn82:38.17": "wie treffend das vom Buddha gesagt wurde! ",
   "mn82:38.19": "Denn die Welt ist tatsächlich brüchig und wird fortgerissen. ",
-  "mn82:39.1": "An diesem königlichen Hof gibt es Bataillone von Elefanten, Reitertruppen, Streitwagen oder Fußsoldaten. Sie dienen dazu, uns vor allen Bedrohungen zu schützen. Dennoch sagtest du: "
+  "mn82:39.1": "An diesem königlichen Hof gibt es Bataillone von Elefanten, Reitertruppen, Streitwagen oder Fußsoldaten. Sie dienen dazu, uns vor allen Bedrohungen zu schützen. Dennoch sagtest du: ",
+  "mn82:39.2": "‚Die Welt hat keinen Schutz und keinen Retter.‘ "
 }
