--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti1:2.2": "e il non-ritorno è assicurato. ",
   "iti1:2.3": "E qual è questa cosa? ",
   "iti1:2.4": "L’avidità.” ",
-  "iti1:2.6": "Il Buddha spiegò il senso di ciò ",
+  "iti1:2.6": "Il Buddha chiarì il senso ",
   "iti1:2.7": "con queste parole: ",
   "iti1:3.1": "“Affamate/inappagate dall’avidità, ",
   "iti1:3.2": "le creature giungono a uno stato di miseria. ",
