--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti1:2.4": "L’avidità.” ",
   "iti1:2.6": "Il Buddha chiarì il senso ",
   "iti1:2.7": "delle sue parole così: ",
-  "iti1:3.1": "“Affamate/inappagate dall’avidità, ",
+  "iti1:3.1": "“Divorate dall’avidità, ",
   "iti1:3.2": "le creature giungono a uno stato di miseria. ",
   "iti1:3.3": "Chi comprende del tutto l’avidità, ",
   "iti1:3.4": "vedendo chiaramente, si sbarazza di essa, ",
