--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti1:2.7": "delle sue parole così: ",
   "iti1:3.1": "“Divorate dall’avidità, ",
   "iti1:3.2": "le creature giungono a uno stato di miseria. ",
-  "iti1:3.3": "Chi comprende del tutto l’avidità, ",
+  "iti1:3.3": "Piena comprensione del l’avidità, ",
   "iti1:3.4": "vedendo chiaramente, si sbarazza di essa, ",
   "iti1:3.5": "e non ritorna ",
   "iti1:3.6": "più in questo mondo.” ",
