--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti1:3.1": "“Divorate dall’avidità, ",
   "iti1:3.2": "le creature giungono a uno stato di miseria. ",
   "iti1:3.3": "Piena comprensione del l’avidità, ",
-  "iti1:3.4": "vedendo chiaramente, si sbarazza di essa, ",
+  "iti1:3.4": "vedendo chiaramente, abbandonano ",
   "iti1:3.5": "e non ritorna ",
   "iti1:3.6": "più in questo mondo.” ",
   "iti1:4.1": "Anche questo disse il Buddha. Così ho udito. "
