--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp116:1": "Prionite da činite dobro, ",
   "dhp116:2": "loše misli odagnajte, ",
   "dhp116:3": "u onoga ko dobra ne čini, ",
-  "dhp116:4": "um se raduje zlodelu. "
+  "dhp116:4": "um se raduje zlodelu. ",
+  "dhp117:1": "Ako čovek i učini nešto loše, "
 }
