--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -345,5 +345,6 @@
   "mn82:42.6": "verlangen nach immer mehr Sinnenfreuden. ",
   "mn82:42.7": "Ein Erobererkönig, der das Land in Besitz genommen hat ",
   "mn82:42.8": "und das Land von einem Meer zum anderen beherrscht, ",
-  "mn82:42.9": "unzufrieden mit dieser Küste, "
+  "mn82:42.9": "unzufrieden mit dieser Küste, ",
+  "mn82:42.10": "würde noch nach der anderen verlangen. "
 }
