--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp117:1": "Ako čovek i učini nešto loše, ",
   "dhp117:2": "neka to ne ponavlja, ",
   "dhp117:3": "neka u tome ne uživa. ",
-  "dhp117:4": "Bolno je gomilanje zlodela. "
+  "dhp117:4": "Bolno je gomilanje zlodela. ",
+  "dhp118:1": "Ako čovek učini dobro, "
 }
