--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -352,5 +352,6 @@
   "mn82:42.13": "Sie verlassen den Körper und wollen noch immer, ",
   "mn82:42.14": "denn in dieser Welt machen Sinnenfreuden nie satt. ",
   "mn82:42.15": "Verwandte jammern mit zerzaustem Kopf: ",
-  "mn82:42.16": "‚Oh! Ach! Er ist nicht unsterblich!‘ "
+  "mn82:42.16": "‚Oh! Ach! Er ist nicht unsterblich!‘ ",
+  "mn82:42.17": "Sie tragen den Körper hinaus, in eine Hülle gewickelt, "
 }
