--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -358,5 +358,6 @@
   "mn82:42.19": "Während er brennt, wird er von Pflöcken durchbohrt, ",
   "mn82:42.20": "in nur ein einziges Tuch gewickelt, der Reichtum vergangen. ",
   "mn82:42.21": "Verwandte, Freunde und Gefährten ",
-  "mn82:42.22": "können nicht helfen, wenn man stirbt. "
+  "mn82:42.22": "können nicht helfen, wenn man stirbt. ",
+  "mn82:42.23": "Erben nehmen den Reichtum, "
 }
