--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -364,5 +364,6 @@
   "mn82:42.25": "Reichtum folgt einem nicht in den Tod, ",
   "mn82:42.26": "auch nicht Kinder, Frau, Vermögen und Königreich. ",
   "mn82:42.27": "Langes Leben kann man nicht kaufen, ",
-  "mn82:42.28": "und Reichtum kann das Alter nicht bannen; "
+  "mn82:42.28": "und Reichtum kann das Alter nicht bannen; ",
+  "mn82:42.29": "denn die Weisen sagen, das Leben ist kurz, "
 }
