--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp168:4": "srećan je u životu, i ovom i narednom. ",
   "dhp169:1": "Učenje praktikuj kako treba, ",
   "dhp169:2": "ne praktikuj ga pogrešno. ",
-  "dhp169:3": "Ko u Učenju živi, "
+  "dhp169:3": "Ko u Učenju živi, ",
+  "dhp169:4": "srećan je u životu, i ovom i narednom. "
 }
