--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp169:2": "ne praktikuj ga pogrešno. ",
   "dhp169:3": "Ko u Učenju živi, ",
   "dhp169:4": "srećan je u životu, i ovom i narednom. ",
-  "dhp170:1": "Ovaj svet je poput mehura, "
+  "dhp170:1": "Ovaj svet je poput mehura, ",
+  "dhp170:2": "ovaj svet je poput opsene, "
 }
