--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dhp170:2": "ovaj svet je poput opsene, ",
   "dhp170:3": "onog ko tako gleda na ovaj svet ",
   "dhp170:4": "gospodar smrti ne vidi. ",
-  "dhp171:1": "Pogledaj ovaj svet, "
+  "dhp171:1": "Pogledaj ovaj svet, ",
+  "dhp171:2": "nalik raskošnoj kraljevskoj kočiji, "
 }
