--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp170:4": "gospodar smrti ne vidi. ",
   "dhp171:1": "Pogledaj ovaj svet, ",
   "dhp171:2": "nalik raskošnoj kraljevskoj kočiji, ",
-  "dhp171:3": "opčinjeni njime, nezreli propadaju, "
+  "dhp171:3": "opčinjeni njime, nezreli propadaju, ",
+  "dhp171:4": "dok za znalce vezivanja nema. "
 }
