--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp171:3": "opčinjeni njime, nezreli propadaju, ",
   "dhp171:4": "dok za znalce vezivanja nema. ",
   "dhp172:1": "Ko je nekada nepažljiv bio, ",
-  "dhp172:2": "a sad više nije, "
+  "dhp172:2": "a sad više nije, ",
+  "dhp172:3": "osvetljava ovaj svet, "
 }
