--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -28,5 +28,6 @@
   "dhp172:4": "kao Mesec kad iza oblaka izroni. ",
   "dhp173:1": "Ko svoje rđavo delo ",
   "dhp173:2": "kasnije nadmaši dobrim, ",
-  "dhp173:3": "taj osvetli ovaj svet, "
+  "dhp173:3": "taj osvetli ovaj svet, ",
+  "dhp173:4": "kao Mesec kad iza oblaka izroni. "
 }
