--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp173:2": "kasnije nadmaši dobrim, ",
   "dhp173:3": "taj osvetli ovaj svet, ",
   "dhp173:4": "kao Mesec kad iza oblaka izroni. ",
-  "dhp174:1": "Slep je zaista ovaj svet, "
+  "dhp174:1": "Slep je zaista ovaj svet, ",
+  "dhp174:2": "retki su oni koji vide. "
 }
