--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp173:3": "taj osvetli ovaj svet, ",
   "dhp173:4": "kao Mesec kad iza oblaka izroni. ",
   "dhp174:1": "Slep je zaista ovaj svet, ",
-  "dhp174:2": "retki su oni koji vide. "
+  "dhp174:2": "retki su oni koji vide. ",
+  "dhp174:3": "K’o i ptice što iz mreže umaknu, "
 }
