--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp173:4": "kao Mesec kad iza oblaka izroni. ",
   "dhp174:1": "Slep je zaista ovaj svet, ",
   "dhp174:2": "retki su oni koji vide. ",
-  "dhp174:3": "K’o i ptice što iz mreže umaknu, "
+  "dhp174:3": "K’o i ptice što iz mreže umaknu, ",
+  "dhp174:4": "malo je onih što do neba stignu. "
 }
