--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp174:2": "retki su oni koji vide. ",
   "dhp174:3": "K’o i ptice što iz mreže umaknu, ",
   "dhp174:4": "malo je onih što do neba stignu. ",
-  "dhp175:1": "Put Sunca labudovi lete, "
+  "dhp175:1": "Put Sunca labudovi lete, ",
+  "dhp175:2": "oni sa moćima vazduhom, "
 }
