--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp175:4": "iz ovog sveta odlaze. ",
   "dhp176:1": "Za onoga ko krši jedini zakon, ",
   "dhp176:2": "za onoga ko laže, ",
-  "dhp176:3": "za onoga ko ne mari za buduće živote, "
+  "dhp176:3": "za onoga ko ne mari za buduće živote, ",
+  "dhp176:4": "za tog nema zla koje počiniti neće. "
 }
