--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp176:2": "za onoga ko laže, ",
   "dhp176:3": "za onoga ko ne mari za buduće živote, ",
   "dhp176:4": "za tog nema zla koje počiniti neće. ",
-  "dhp177:1": "Sebičnjaci među bogove ne stižu, "
+  "dhp177:1": "Sebičnjaci među bogove ne stižu, ",
+  "dhp177:2": "budale ne hvale davanje. "
 }
