--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp176:3": "za onoga ko ne mari za buduće živote, ",
   "dhp176:4": "za tog nema zla koje počiniti neće. ",
   "dhp177:1": "Sebičnjaci među bogove ne stižu, ",
-  "dhp177:2": "budale ne hvale davanje. "
+  "dhp177:2": "budale ne hvale davanje. ",
+  "dhp177:3": "Mudrac dajući uživa "
 }
