--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp177:1": "Sebičnjaci među bogove ne stižu, ",
   "dhp177:2": "budale ne hvale davanje. ",
   "dhp177:3": "Mudrac dajući uživa ",
-  "dhp177:4": "i samo zbog toga srećan je on i posle smrti. "
+  "dhp177:4": "i samo zbog toga srećan je on i posle smrti. ",
+  "dhp178:1": "Bolji od vlasti nad čitavim svetom, "
 }
