--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp177:2": "budale ne hvale davanje. ",
   "dhp177:3": "Mudrac dajući uživa ",
   "dhp177:4": "i samo zbog toga srećan je on i posle smrti. ",
-  "dhp178:1": "Bolji od vlasti nad čitavim svetom, "
+  "dhp178:1": "Bolji od vlasti nad čitavim svetom, ",
+  "dhp178:2": "bolji od odlaska na nebo "
 }
