--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -33,7 +33,7 @@
   "sn22.89:11.1": "Quando le cinque catene inferiori sono state abbandonate dal nobile discepolo, per quello allora e': \"riguardo le cinque cataste ardenti qualsiasi residuo di concetto io sono, desiderio io sono, tendenza io sono, non e' stato sradicato ",
   "sn22.89:11.2": "In un'altra occasione sta osservando il sorgere e svanire delle cinque cataste ardenti- ",
   "sn22.89:11.3": "cosi' e' la materia, cosi' e' l'origine della materia, cosi' e' lo svanire ",
-  "sn22.89:11.8": "quando contempla vedendo il sorgere e svanire in queste cinque cataste ardenti, qualsiasi cosa e' residua nelle cinque cataste ardenti circa concetto \"io sono,\" desiderio 'io sono', o tendenza  \"io sono,\" non e' eradicato, e uno va verso l'eradicazione. ",
+  "sn22.89:11.8": "quando contempla vedendo il sorgere e svanire in queste cinque cataste ardenti, qualsiasi cosa e' residua nelle cinque cataste ardenti circa concetto \"io sono,\" desiderio 'io sono', o tendenza  \"io sono,\" che non e' stato eradicato, e uno va verso l'eradicazione. ",
   "sn22.89:12.1": "E' come una stoffa macchiata e sporca che dei padroni dessero al lavandaio ",
   "sn22.89:12.2": "Quel lavandaio dopo averlo sfregato con della potassa, lisciva, o sterco di vacca, lo risciacqua con dell'acqua limpida. ",
   "sn22.89:12.3": "Quando questa macchia è stata pulita e purificata, allora per quello straccio c'è un solo residuo e l'odore della potassa, della lisciva o dello sterco di vacca non e' stato sradicato. ",
