--- a/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "sn22.56:1.5": "Fino a quando non compresi direttamente* queste cinque cataste ardenti, così come sono ?nei loro quattro cicli.... ",
   "sn22.56:2.1": "E come ci furono i quattro cicli? ",
-  "sn22.56:2.2": "Compresi direttamente la materia, l'origine della materia, la fine della materia, la via verso la fine della materia. "
+  "sn22.56:2.2": "Compresi direttamente la materia, l'origine della materia, la fine della materia, la via verso la fine della materia. ",
+  "sn22.56:3.1": "E che cos'e' la forma/materia? "
 }
