--- a/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
@@ -3,5 +3,6 @@
   "sn22.56:2.1": "E come ci furono i quattro cicli? (processi ciclici?) ",
   "sn22.56:2.2": "Compresi direttamente la materia, l'origine della materia, la fine della materia, la via verso la fine della materia. ",
   "sn22.56:3.1": "E che cos'e' la forma/materia? ",
-  "sn22.56:3.2": "I quattro grandi elementi  e la materia che deriva dai quattro elementi. "
+  "sn22.56:3.2": "I quattro grandi elementi  e la materia che deriva dai quattro elementi. ",
+  "sn22.56:3.3": "Questa e' chiamata materia. "
 }
