--- a/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
@@ -5,5 +5,6 @@
   "sn22.56:3.1": "E che cos'e' la forma/materia? ",
   "sn22.56:3.2": "I quattro grandi elementi  e la materia che deriva dai quattro elementi. ",
   "sn22.56:3.3": "Questa e' chiamata materia. ",
-  "sn22.56:3.4": "con l'origine del cibo/nutrimento, c'e' l'origine della materia "
+  "sn22.56:3.4": "con l'origine del cibo/nutrimento, c'e' l'origine della materia ",
+  "sn22.56:3.5": "con la fine del nutrimento, c'e' la fine della materia. "
 }
