--- a/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
@@ -8,5 +8,6 @@
   "sn22.56:3.4": "con l'origine del cibo/nutrimento, c'e' l'origine della materia ",
   "sn22.56:3.5": "con la fine del nutrimento, c'e' la fine della materia. ",
   "sn22.56:3.6": "La via verso la fine della materia... ",
-  "sn22.56:6.1": "E che cos'e' la sensazione? "
+  "sn22.56:6.1": "E che cos'e' la sensazione? ",
+  "sn22.56:6.2": "Ci sono queste sei categorie di sensazioni. "
 }
